--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "dev": "Node_ENV=development nodemon /src/index.js "
+    "dev": "cross-env NODE_ENV=development nodemon ./src/index.js"
+
   },
   "keywords": [],
   "author": {
