--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon ./src/index.js"
-
+    "dev": " NODE_ENV=development nodemon ./src/index.js"
   },
   "keywords": [],
   "author": {
@@ -20,12 +19,14 @@
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "uuid": "^13.0.0"
   }
 }
