--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "elevenlabs": "^1.59.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "uuid": "^13.0.0"
   }
 }
