--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "uuid": "^13.0.0",
     "ws": "^8.18.3"
